Fixes #507- User dialog looks not good on mobile

--- a/IsraelHiking.Web/sources/application/components/dialogs/dialogs.css
+++ b/IsraelHiking.Web/sources/application/components/dialogs/dialogs.css
@@ -36,11 +36,12 @@
 }
 
 @media (max-width:767px) {
-    mat-dialog-container {
+    .mat-dialog-container {
         margin: 0 auto;
+        max-height: 90vh;
     }
 
-        mat-dialog-container .mat-button {
+        .mat-dialog-container .mat-button {
             white-space: normal;
         }
 }
